# status-go

./: CMakeLists.txt  go.mod  go.sum
appdatabase/migrations/: bindata.go
appdatabase/migrationsprevnodecfg/: bindata.go
cmd/ping-community/: main.go
config/cli/: fleet-eth.staging.json
multiaccounts/accounts/: database.go
multiaccounts/settings/: columns.go  database.go  structs.go
params/: config.go
protocol/: chat.go  message_persistence.go  messenger.go  messenger_communities.go  messenger_config.go  messenger_contacts.go  messenger_delete_message_test.go  messenger_handler.go  messenger_mailserver.go  messenger_mailserver_cycle.go  messenger_response.go  messenger_status_updates.go  persistence.go
protocol/anonmetrics/migrations/: migrations.go
protocol/encryption/migrations/: migrations.go
protocol/migrations/: migrations.go
protocol/pushnotificationclient/migrations/: migrations.go
protocol/pushnotificationserver/migrations/: migrations.go
protocol/transport/migrations/: migrations.go
scripts/: build_statusgo_shared_win.bat  build_statusgo_static_win.bat
services/ext/: api.go  service.go  signal.go
services/local_pairing/: service.go
services/mailservers/: database.go  fleet.go
services/stickers/: api.go
signal/: events_shhext.go
static/: bindata.go
